# hipmmapeak

./: CMakeLists.txt  LICENSE  README.md  common.h  gfx11.h  gfx12.h  hipmmapeak.hip
src/: gfx11.h  gfx12.h  hipmmapeak.hip
